# uvaresearchproject

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.txt  PROJECT_OVERVIEW.md  README.md  THIRD_PARTY_LICENSES.txt  pyproject.toml  pytest.ini  requirements.txt  test_solar_ui.py
.bob/rules-advanced/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-rz-gcs.yml  build-uavresearch-gcs.yml  tests.yml
docker/: Dockerfile.jetson  Dockerfile.pi  Dockerfile.x86  docker-compose.yml
docs/: ANWENDUNGSBESCHREIBUNG.md  PX4_OPTIMIERUNGEN_UND_FEATURES.md  README.md  SOFTWARE_DOCUMENTATION.md
docs/api/: control.md  safety.md
docs/features/: battery-monitoring.md  collision-prediction.md  field-coverage-planning.md
docs/i18n/: README.md  TODO.md  translation-guide.md
docs/project/: implementation-plan-2026.md  improvements.md  overview.md
docs/release/: checklist.md  notes-v0.3.0.md  releases-repo.md
docs/security/: PYSIDE6_MIGRATION_GUIDE.md
docs/setup/: installation.md  px4-mission-monitoring.md  px4-mission-upload.md  px4-sitl-automation.md  px4-sitl.md  raspberry-pi.md
docs/testing/: ci-cd-guide.md  e2e-setup.md  test-strategy.md
docs/ui/: PHASE4_UI_IMPLEMENTATION_STATUS.md  bag-playback-controls.md  escape-ui-features.md  escape-ui-integration-guide.md  solar-inspection-ui-integration.md  ui-documentation.md
droneresearch/: __init__.py  exceptions.py
droneresearch/autopilot/: __init__.py  base.py
droneresearch/cli/: main.py
droneresearch/control/: __init__.py  field_coverage.py  mission.py  mission_validation.py  script_runner.py  seeding_planner.py
droneresearch/core/: __init__.py  connection.py  fsm.py  telemetry.py
droneresearch/data/: __init__.py  logger.py  store.py
droneresearch/experiment/: __init__.py  manager.py  metrics.py  scenario.py
droneresearch/exploration/: __init__.py  frontier_bridge.py  vswarm_bridge.py
droneresearch/i18n/: __init__.py
droneresearch/llm/: __init__.py  swarm_commander.py
droneresearch/models/: __init__.py  coordinator_uav.py  generic_uav.py  observation_uav.py
droneresearch/ros/: __init__.py  bag_recorder.py  bridge.py  context.py  px4_bridge.py  px4_formation.py  px4_mission.py
droneresearch/safety/: __init__.py  apf.py  (+3 more)
examples/: autonomous_exploration.py  battery_monitor_demo.py  coordinator_demo.py  event_based.py  frame_conversion_demo.py  full_research_pipeline.py  hover.py  llm_swarm_control.py  px4_formation_demo.py  px4_hardware_test.py  px4_mission_upload.py  px4_multi_vehicle.py  px4_ros2_offboard.py  px4_sitl_automation.py  ros2_bridge.py  speed_experiment.py  swarm_circle.py  test_mission_ui.py  vswarm_flocking.py
experiments/: swarm_10_circle_grid.py
pi/: README_PI.md  droneresearch.service  install.sh  requirements_pi.txt  server.py
tests/: conftest.py  test_apf.py  test_apf_acceleration.py  test_apf_oscillation_damping.py  test_async_mission_upload.py  test_bag_compression_benchmark.py  test_bag_playback_context.py  test_bag_recorder.py  test_battery_monitor.py  test_boundary_drawing_timeout.py  test_cli.py  test_collision_prediction.py  test_depth_camera_subscriber.py  test_field_coverage.py  test_formations.py  test_frame_conversion.py  test_fsm.py  test_i18n.py  test_i18n_integration.py  test_license.py  test_logger.py  test_mission.py  test_mission_preflight_validation.py  test_mission_upload_async.py  test_multi_drone_coverage.py  test_perception_avoidance_obstacle_timeout.py  test_perception_avoidance_voxel_grid.py  test_px4_formation.py  test_px4_gazebo.py  test_px4_log_streaming.py  test_px4_mission.py  test_px4_mission_monitoring.py  test_px4_mission_preflight_validation.py  test_ros2_bridge_sync.py  test_ros2_reconnect.py  test_ros_context.py  test_seeding_planner.py  test_swarm_context_mission_multi.py  test_swarm_context_runtime.py  test_system_mission_workflow.py  (+6 more)
tools/: benchmark_bag_compression.py  launch_px4_sitl.sh  live_swarm_map.py  migrate_to_pyside6.py  plot_flight.py  plot_swarm.py  profile_memory.py
(+97 files in other folders)
