[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droneresearch"
version = "0.2.0"
description = "Open, scriptable research platform for drone experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joel Djio" }]
keywords = ["drone", "mavlink", "ros2", "research", "uav", "swarm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pymavlink>=2.4.40",
    "pyserial>=3.5",
]

[project.optional-dependencies]
# Note: the graphical GCS lives on the `ui-dashboard` branch under
# tools/ui/ and uses PyQt6 directly. It is intentionally not packaged
# as an extra here so the core platform stays headless / Pi-deployable.
ros = []       # rclpy installed separately via apt/pip
test = ["pytest>=8.0"]
dev = ["pytest>=7.0", "pytest-timeout>=2.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --timeout=30"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project.scripts]
droneresearch = "droneresearch.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["droneresearch*", "core*", "data*", "control*", "swarm*", "ros*", "experiment*", "ui*", "cli*", "sdk*"]
